<resources>
    <string name="app_name">TellMe</string>
    //mainActivity for test
    <string name="test_login">Test Login</string>
    <string name="test_register">Test Register</string>
    <string name="test_debug">Test Debug</string>
    <string name="test_home">Test Home</string>
    <string name="test_add_friend">Test Add Friend</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signUp">Sign Up</string>
    <string name="rememberPW">RememberPassWord</string>
    <string name="autoLogin">Auto-Login</string>
    <string name="errorUsername">Error Username</string>
    <string name="errorPassword">Error Password</string>
    <string name="errorEmail">Error E-mail</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="mine">Mine</string>
    <string name="user_profile">Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="search_friend">Search Friend</string>
    <string name="send">Send</string>
    <string name="setNickname">为好友设置昵称</string>
    <string name="setGroup">设置群组</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="clean_db">Clean DB</string>
</resources>
