<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.hzxr.tellme.ui.VM.SetFriendViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/add_friend"
                bind:navigationContentDescription="back"
                bind:navigationIcon="@mipmap/icon_back"
                bind:setNavigationOnClickListener="@{vm.navigationOnClickListener}"/>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:background="@color/jet"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/setNickname"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/nickname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="SetNickName"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:background="@color/jet"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            bind:layout_constraintEnd_toEndOf="parent"
            bind:layout_constraintHorizontal_bias="0.0"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/setGroup"
                android:textColor="@color/white" />

            <EditText
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/group_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="SetGroup" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/jet"
            android:gravity="end"
            bind:layout_constraintBottom_toBottomOf="parent"
            bind:layout_constraintEnd_toEndOf="parent"
            bind:layout_constraintHorizontal_bias="0.0"
            bind:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/submit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:onClick="@{vm.submitOnClickListener}"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</layout>